Make all links open new tab, change Team icon

--- a/people.html
+++ b/people.html
@@ -74,7 +74,7 @@
     <section id="main">
         <div class="inner">
             <header>
-                <h1><i class="fas fa-user" aria-hidden="true"></i>
+                <h1><i class="fas fa-users"></i>
                     Team Members
                 </h1>
             </header>
@@ -100,21 +100,22 @@
                                     <div class="card">
                                         <div class="card-body text-center mt-4">
                                             <h4 class="card-title">Towfique Raj, Ph.D.</h4>
-                                            <p class="card-text">Towfique Raj, PhD, is a core faculty member in the <a
-                                                    href="https://icahn.mssm.edu/research/loeb-alzheimers">Ronald M.
+                                            <p class="card-text">Towfique Raj, PhD, is a core faculty member in the 
+                                                <a target="_blank" href="https://icahn.mssm.edu/research/loeb-alzheimers">Ronald M.
                                                     Loeb Center for Alzheimer's Disease</a> and an assistant professor
-                                                in the <a href="https://icahn.mssm.edu/about/departments/neuroscience">Department
-                                                    of Neuroscience</a> and the <a href="https://icahn.mssm.edu/research/genomics">Department
+                                                in the <a target="_blank" href="https://icahn.mssm.edu/about/departments/neuroscience">Department
+                                                    of Neuroscience</a> and the <a target="_blank" href="https://icahn.mssm.edu/research/genomics">Department
                                                     of Genetics and Genomics</a> at Icahn School of Medicine at Mount
-                                                Sinai, New York. Dr. Raj received his PhD in genetics from <a href="https://www.graduate.study.cam.ac.uk/courses/directory/blgepdphg">Cambridge
-                                                    University</a> and completed a postdoctoral fellowship at the <a
-                                                    href="https://www.broadinstitute.org/">Broad Institute</a> of MIT
+                                                Sinai, New York. Dr. Raj received his PhD in genetics from 
+                                                <a target="_blank" href="https://www.graduate.study.cam.ac.uk/courses/directory/blgepdphg">Cambridge
+                                                    University</a> and completed a postdoctoral fellowship at the 
+                                                    <a target="_blank" href="https://www.broadinstitute.org/">Broad Institute</a> of MIT
                                                 and Harvard. Before joining Mount Sinai, Dr. Raj was an instructor of
-                                                neurology at <a href="https://hms.harvard.edu/">Harvard Medical School</a>
-                                                and a visiting scholar at <a href="https://www.stanford.edu/">Stanford
-                                                    University</a>. Dr. Raj received the <a href="https://www.gatescambridge.org/">Gates-Cambridge
-                                                    Scholarship</a>, <a href="https://researchtraining.nih.gov/programs/fellowships">NIH
-                                                    Ruth L. Kirschstein Research Service Award</a> and the <a href="https://www.donorscure.org/conference/about">Charleston
+                                                neurology at <a target="_blank" href="https://hms.harvard.edu/">Harvard Medical School</a>
+                                                and a visiting scholar at <a target="_blank" href="https://www.stanford.edu/">Stanford
+                                                    University</a>. Dr. Raj received the <a target="_blank" href="https://www.gatescambridge.org/">Gates-Cambridge
+                                                    Scholarship</a>, <a target="_blank" href="https://researchtraining.nih.gov/programs/fellowships">NIH
+                                                    Ruth L. Kirschstein Research Service Award</a> and the <a target="_blank" href="https://www.donorscure.org/conference/about">Charleston
                                                     Conference on Alzheimer's Disease Award</a>. His research group
                                                 uses powerful computational and experimental tools for genetic research
                                                 and interdisciplinary approaches to understand the genetic factors
@@ -223,7 +224,7 @@
                                             <p class="card-text">Ricardo is working with state-of-the-art computational
                                                 methods and sequencing technologies to unveil the role of genomic
                                                 structural variation in brain diseases. He obtained his PhD in
-                                                Bioinformatics in 2017 from the<a href="https://ufmg.br/cursos/pos-graduacao/doutorado/2573/01">
+                                                Bioinformatics in 2017 from the<a target="_blank" href="https://ufmg.br/cursos/pos-graduacao/doutorado/2573/01">
                                                     Federal University of Minas Gerais</a> in Brazil. When not in the
                                                 lab, Ricardo enjoys playing guitar and video games</p>
                                             <ul class="list-inline">
@@ -269,10 +270,10 @@
                                     <div class="card">
                                         <div class="card-body text-center mt-4">
                                             <h4 class="card-title">Giulietta Riboldi, M.D.</h4>
-                                            <p class="card-text">Giulietta is a post-doctoral fellow at the <a href="https://med.nyu.edu/parkinson/fresco-institute-parkinsons-movement-disorders">
+                                            <p class="card-text">Giulietta is a post-doctoral fellow at the <a target="_blank" href="https://med.nyu.edu/parkinson/fresco-institute-parkinsons-movement-disorders">
                                                     Fresco Institute for Parkinson’s disease and Movement Disorders</a>at
                                                 NYU Langone Health. She received her MD and completed her Neurology
-                                                Residency at the <a href="http://www.unimi.it/ENG/university/31941.htm">University
+                                                Residency at the <a target="_blank" href="http://www.unimi.it/ENG/university/31941.htm">University
                                                     of Milan</a>. Her current project in the Raj lab is focusing on the
                                                 understating of the role of risk factor gene, GBA, in Parkinson's
                                                 disease.</p>
@@ -449,8 +450,8 @@
                                         <div class="card-body text-center mt-4">
                                             <h4 class="card-title">Evan Udine, M.S.</h4>
                                             <p class="card-text">Evan received his B.A. in Neuroscience and Behavior
-                                                from <a href="https://neuroscienceandbehavior.vassar.edu/"> Vassar
-                                                    College </a> in 2016 and M.S. in Neuroscience from <a href="https://neuroscience.columbia.edu/">
+                                                from <a target="_blank" href="https://neuroscienceandbehavior.vassar.edu/"> Vassar
+                                                    College </a> in 2016 and M.S. in Neuroscience from <a target="_blank" href="https://neuroscience.columbia.edu/">
                                                     Columbia University </a> in 2018. He's currently involved in the
                                                 MyND project and is working to integrate clinical and mutli-omic data
                                                 to elucidate genetic drivers of disease. When not working, you can find
@@ -495,7 +496,7 @@
                                     <div class="card">
                                         <div class="card-body text-center mt-4">
                                             <h4 class="card-title">Madison Parks, B.S.</h4>
-                                            <p class="card-text">Madison is a recent graduate of <a href="https://www.dickinson.edu/homepage/41/neuroscience">
+                                            <p class="card-text">Madison is a recent graduate of <a target="_blank" href="https://www.dickinson.edu/homepage/41/neuroscience">
                                                     Dickinson College </a>where she obtained her B.S. in Neuroscience.
                                                 In the lab, Madison uses molecular techniques to elucidate genetic
                                                 contributors to neurodegenerative diseases. She will be attending
@@ -590,7 +591,7 @@
                 <p>19 E 98th Street, Room 6C <br>
                     New York, NY 10029<br>
                 </p>
-                <a href="https://github.com/RajLabMSSM" target="_blank">
+                <a target="_blank" href="https://github.com/RajLabMSSM" target="_blank">
                     <img src="./icons/github.png" id="github-logo">
                 </a>
             </div>
@@ -601,7 +602,7 @@
                     New York, NY 10029<br><br>
                 </p>
                 <div id="sinai-logo">
-                    <a href="https://icahn.mssm.edu/" target="_blank">
+                    <a target="_blank" href="https://icahn.mssm.edu/" target="_blank">
                         <img src="./icons/Icahn.png">
                     </a>
                 </div>
