Fix pubs page (fade class used twice)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
 	<!-- Local Scripts -->
-	<script src="./assets/js/jquery.min.js"></script> 
+	<script src="assets/js/util.js"></script>
+	<script src="./assets/js/jquery.min.js"></script>  
 
 	<!-- Icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
@@ -46,7 +47,7 @@
 	
 
 	<!-- Carousel -->
-	<div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+	<div id="carouselIndicators" class="carousel slide carousel-fade" data-ride="carousel"  >
 		<ol class="carousel-indicators">
 			<li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
 			<li data-target="#carouselIndicators" data-slide-to="1"></li>
@@ -55,10 +56,10 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="./images/carousel/central_park0.JPG" alt="slide0">
+				<img class="d-block w-100" src="./images/carousel/central_park0.JPG" alt="slide0" >
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/BRAIN.png" alt="slide1" style="padding:100px 175px 175px 175px;">
+				<img class="d-block w-100 wordBrain" src="./images/BRAIN.png" alt="slide1" style="padding:10% 20% 20% 20%;">
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="./images/carousel/central_park2.JPG" alt="slide2">
