Add Katia pres'

--- a/publications.html
+++ b/publications.html
@@ -70,33 +70,37 @@
 				</p>
 			</header>
 		</div>
- 
+
 
 		<div class="container publicationTabs" id="publicationTabs">
 			<div class="row">
 				<div class="col-xs-12 ">
 					<nav>
 						<div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-							<a class="nav-item nav-link" id="pubsSections_tab_button" data-toggle="tab" href="#pubsSections_tab"
-								role="tab" aria-controls="pubsSections_tab" aria-selected="true">
+							<a class="nav-item nav-link" id="pubsSections_tab_button" data-toggle="tab"
+								href="#pubsSections_tab" role="tab" aria-controls="pubsSections_tab"
+								aria-selected="true">
 								Section View
 							</a>
-							<a class="nav-item nav-link active" id="pubsTable_tab_button" data-toggle="tab" href="#pubsTable_tab"
-								role="tab" aria-controls="pubsTable_tab" aria-selected="false">
+							<a class="nav-item nav-link active" id="pubsTable_tab_button" data-toggle="tab"
+								href="#pubsTable_tab" role="tab" aria-controls="pubsTable_tab" aria-selected="false">
 								Datatable View
 							</a>
 						</div>
 					</nav>
 					<div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
 						<!-- Section View -->
-						<div class="tab-pane fade" id="pubsSections_tab" role="tabpanel" aria-labelledby="pubsSections_tab">
+						<div class="tab-pane fade" id="pubsSections_tab" role="tabpanel"
+							aria-labelledby="pubsSections_tab">
 							<!-- <input class="form-control" type="text" placeholder="Search" aria-label="Search"> -->
 							<div id="pubDivContainer" class="container"> </div>
 						</div>
 						<!-- Datatable View -->
-						<div class="tab-pane fade show active" id="pubsTable_tab" role="tabpanel" aria-labelledby="pubsTable_tab">
+						<div class="tab-pane fade show active" id="pubsTable_tab" role="tabpanel"
+							aria-labelledby="pubsTable_tab">
 							<div id="pubContainer" class="container">
-								<table id="pubsTable" class="pubsTable compact" cellspacing="0" cellpadding="0" border="0" width="100%">
+								<table id="pubsTable" class="pubsTable compact" cellspacing="0" cellpadding="0"
+									border="0" width="100%">
 								</table>
 							</div>
 						</div>
@@ -111,30 +115,48 @@
 		<div class="inner" id="Presentations">
 			<header>
 				<h1> <i class="far fa-file-powerpoint"></i> Presentations</h1>
-				<p>View, share, or download our presentations from professional conferences, journal clubs, and lab meetings
+				<p>View, share, or download our presentations from professional conferences, journal clubs, and lab
+					meetings
 					<br>
 					Jump to <a href="#Publications">Publications</a>
 				</p>
 
 			</header>
 			<div id="slideshare">
+				<!-- presentation -->
+				<iframe src="//www.slideshare.net/slideshow/embed_code/key/cgZmIzrJzaV1CZ" width="595" height="485"
+					frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
+					style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
+					allowfullscreen> </iframe>
+				<div style="margin-bottom:5px"> <strong> <a
+							href="//www.slideshare.net/BrianSchilder/fungen-jc-presentation-mostafavi-et-al-2019"
+							title="FunGen JC Presentation - Mostafavi et al. (2019)" target="_blank">FunGen JC
+							Presentation - Mostafavi et al. (2019)</a> </strong> by <strong><a
+							href="https://www.slideshare.net/BrianSchilder" target="_blank">Katia Lopes</a></strong>
+				</div>
+				<!-- presentation -->
 				<iframe src="//www.slideshare.net/slideshow/embed_code/key/iW42wiLIHwFiuP" width="595" height="485"
 					frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
-					style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
+					style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
+					allowfullscreen>
 				</iframe>
 				<div style="margin-bottom:5px"> <strong> <a
-							href="//www.slideshare.net/BrianSchilder/github-presentation-128406831" title="GitHub Presentation"
-							target="_blank">GitHub Presentation</a> </strong> from <strong><a
-							href="//www.slideshare.net/BrianSchilder" target="_blank">BrianSchilder</a></strong> </div>
+							href="//www.slideshare.net/BrianSchilder/github-presentation-128406831"
+							title="GitHub Presentation" target="_blank">GitHub Presentation</a> </strong> by
+					<strong><a href="//www.slideshare.net/BrianSchilder" target="_blank">Brian Schilder</a></strong>
+				</div>
+				<!-- presentation -->
 				<iframe src="//www.slideshare.net/slideshow/embed_code/key/HyrqheRo0DTvF8" width="595" height="485"
 					frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
-					style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
+					style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
+					allowfullscreen>
 				</iframe>
 				<div style="margin-bottom:5px"> <strong> <a
 							href="//www.slideshare.net/BrianSchilder/sundaram-et-al-2018-presentation"
-							title="Sundaram et al. 2018 Presentation" target="_blank">Sundaram et al. 2018 Presentation</a> </strong>
-					from
-					<strong><a href="https://www.slideshare.net/BrianSchilder" target="_blank">BrianSchilder</a></strong> </div>
+							title="Sundaram et al. 2018 Presentation" target="_blank">Sundaram et al. 2018
+							Presentation</a> </strong> by <strong><a href="https://www.slideshare.net/BrianSchilder"
+							target="_blank">Brian Schilder</a></strong>
+				</div>
 			</div>
 
 		</div>
