--- a/index.html
+++ b/index.html
@@ -121,8 +121,15 @@
 			<div class="row container">
 				<div class="col-md-4 homepageColumn" id="recent_pubs">
 					<h3>Recent Publications</h3>
-					<div class="no-scroll">
+					<div class="scroll">
 						<ul>
+							<li>
+								<strong>Prioritizing Parkinson’s disease genes using population-scale transcriptomic data. </strong><br>
+								<i>Nature Communications, March 1, 2019</i><br>
+								<a href="https://www.nature.com/articles/s41467-019-08912-9" target="_blank">
+									<i class="fas fa-book"></i> Paper
+								</a> 
+							</li>
 							<li>
 								<strong>Integrative transcriptome analyses of the aging brain implicate altered splicing in Alzheimer’s disease
 									susceptibility. </strong><br>
@@ -152,13 +159,13 @@
 								<p> Research associate Madison was accepted to medical school!</p>
 							</li>
 							<li><b>11 . 12 . 2018</b>
-								<p> New members Brian and Katia have joined our lab! Welcome Brian and Katia!</p>
+								<p>New members Brian and Katia have joined our lab! Welcome Brian and Katia!</p>
 							</li>
 							<li><b>10 . 08 . 2018</b>
-								<p> Our work on alternative splicing in AD was published in Nature Genetics! Great job team!</p>
+								<p>Our work on alternative splicing in AD was published in Nature Genetics! Great job team!</p>
 							</li>
 							<li><b>10 . 09 . 2018</b>
-								<p> New member Maojuan joined our lab. Welcome Maojuan!</p>
+								<p>New member Maojuan joined our lab. Welcome Maojuan!</p>
 							</li>
 							<li><b>07 . 15 . 2018</b>
 								<p> Post-doctoral Fellow Elisa was awarded the Ramon Areces Foundation Fellowship. Congrats
