Animate background. Add wordclouds

--- a/data.html
+++ b/data.html
@@ -30,14 +30,17 @@
 
 <body> 
 	<!-- Insert html files -->
-    <script> 
+	<script> 
 		$(function(){ 
+			$("#background_video").load("./background_video.html");
 			$("#footer").load("./footer.html");
 			$("#navbar").load("./navbar.html");  
 		});
 	</script> 
+	<!-- Video -->
+	<section id="background_video"></section> 
 	<!-- Navbar --> 
-	<section id="navbar"></section>
+	<section id="navbar"></section> 
 
 	<!-- Main -->
 	<section id="main">
