--- a/index.html
+++ b/index.html
@@ -32,19 +32,21 @@
 	<link href="./assets/css/thumbnail-gallery.css" rel="stylesheet">
 </head>
 
-<body> 
+<body>   
 	<!-- Insert html files -->
-		<script> 
-			$(function(){ 
-				$("#footer").load("./footer.html");
-				$("#navbar").load("./navbar.html");  
-			});
-		</script> 
+	<script> 
+		$(function(){ 
+			$("#background_video").load("./background_video.html");
+			$("#footer").load("./footer.html");
+			$("#navbar").load("./navbar.html");  
+		});
+	</script> 
+	<!-- Video -->
+	<section id="background_video"></section> 
 	<!-- Navbar --> 
-	<section id="navbar"></section>
-
+	<section id="navbar"></section> 
  
-	
+
 
 	<!-- Carousel -->
 	<div id="carouselIndicators" class="carousel slide carousel-fade" data-ride="carousel"  >
@@ -53,19 +55,23 @@
 			<li data-target="#carouselIndicators" data-slide-to="1"></li>
 			<li data-target="#carouselIndicators" data-slide-to="2"></li>
 			<li data-target="#carouselIndicators" data-slide-to="3"></li>
+			<li data-target="#carouselIndicators" data-slide-to="4"></li>
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img class="d-block w-100" src="./images/carousel/central_park0.JPG" alt="slide0" >
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100 wordBrain" src="./images/BRAIN.png" alt="slide1" style="padding:10% 20% 20% 20%;">
+				<img class="d-block w-100 " src="./images/wordclouds/pacman_titles-descriptions_noBackground.png" alt="slide1" style="padding:10% 20% 20% 20%;">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/carousel/central_park2.JPG" alt="slide2">
+				<img class="d-block w-100" src="./images/wordclouds/braincloud_authors_noBackground.png" alt="slide3" style="padding:10% 20% 20% 20%;">
 			</div> 
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/GW_paper.png" alt="slide3">
+				<img class="d-block w-100" src="./images/carousel/central_park2.JPG" alt="slide2">
+			</div>  
+			<div class="carousel-item">
+				<img class="d-block w-100" src="./images/GW_paper.png" alt="slide4">
 			</div> 
 		</div>
 		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
@@ -77,6 +83,7 @@
 			<span class="sr-only">Next</span>
 		</a>
 	</div>
+	
 
 	<!-- Intro -->
 	<section class="homepageContent">
