--- a/joinus.html
+++ b/joinus.html
@@ -33,14 +33,17 @@
 
 <body>
 	 <!-- Insert html files -->
-	 <script> 
+	<script> 
 		$(function(){ 
+			$("#background_video").load("./background_video.html");
 			$("#footer").load("./footer.html");
 			$("#navbar").load("./navbar.html");  
 		});
 	</script> 
+	<!-- Video -->
+	<section id="background_video"></section> 
 	<!-- Navbar --> 
-	<section id="navbar"></section>
+	<section id="navbar"></section> 
 
 
 	<!-- Footer -->
@@ -50,16 +53,17 @@
 			<header>
 				<h1><i class="fas fa-handshake"></i> Opportunities</h1>
 			</header>
-			We aren't currently advertising any specific positions, 
+			<p>We aren't currently advertising any specific positions, 
 			but if you interested in joining the lab please email us below!
+			</p>
 		</div>
 		<br>
 		<br>
 		<!-- Contact Us --> 
 		<div class="inner"> 
 			<h1><i class="fas fa-envelope-open"></i> Contact Us</h1>
-			Interested in learning more about our work? Inquiring about research positions? 
-			<br>Feel free to send us an email via the form below (addressed to Dr. Towfique Raj).
+			<p>Interested in learning more about our work? Inquiring about research positions? 
+			<br>Feel free to send us an email via the form below (addressed to Dr. Towfique Raj).</p>
 			<br><br>
 			<iframe class="GoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSciYMVblIS4BACTcuUHmQL5JZa21w0M7NZ-9z4MHOCLu7QnYQ/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
