--- a/publications.html
+++ b/publications.html
@@ -42,14 +42,17 @@
 
 <body>
 	<!-- Insert html files -->
-	<script>
-		$(function () {
+	<script> 
+		$(function(){ 
+			$("#background_video").load("./background_video.html");
 			$("#footer").load("./footer.html");
-			$("#navbar").load("./navbar.html");
+			$("#navbar").load("./navbar.html");  
 		});
-	</script>
-	<!-- Navbar -->
-	<section id="navbar"></section>
+	</script> 
+	<!-- Video -->
+	<section id="background_video"></section> 
+	<!-- Navbar --> 
+	<section id="navbar"></section> 
 
 
 	<!-- Main -->
