--- a/background_video.html
+++ b/background_video.html
@@ -4,10 +4,12 @@
     <head></head>
     <body>
         <div id="home-top-video">
-            <video autoplay loop>
+            <video poster="./images/videos/network.jpeg" autoplay loop>
                 <source src="./images/videos/network.mp4" type="video/mp4">
-                </video>
-                <div id="bottom-gradient"></div> 
+                <source src="./images/videos/network.webm" type="video/webm">
+                <source src="./images/videos/network.m4v" type="video/mp4"> 
+            </video>
+            <div id="bottom-gradient"></div> 
         </div>
     </body> 
 </html>
