Add Jack and alumni sections. Fix background scaling

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 				<img class="d-block w-100" src="./images/carousel/central_park0.JPG" alt="slide0" >
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100 " src="./images/wordclouds/pacman_titles-descriptions_noBackground.png" alt="slide1" style="padding:10% 20% 20% 20%;">
+				<img class="d-block w-100 wordcloud" src="./images/wordclouds/pacman_titles-descriptions_noBackground.png" alt="slide1" style="padding:10% 20% 20% 20%;">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/wordclouds/braincloud_authors_noBackground.png" alt="slide3" style="padding:10% 20% 20% 20%;">
+				<img class="d-block w-100 wordcloud" src="./images/wordclouds/braincloud_authors_noBackground.png" alt="slide3" style="padding:10% 20% 20% 20%;">
 			</div> 
 			<div class="carousel-item">
 				<img class="d-block w-100" src="./images/carousel/central_park2.JPG" alt="slide2">
