--- a/publications.html
+++ b/publications.html
@@ -125,40 +125,48 @@
 				</p>
 
 			</header>
-			<div id="slideshare">
-				<!-- presentation -->
-				<iframe src="//www.slideshare.net/slideshow/embed_code/key/cgZmIzrJzaV1CZ" width="595" height="485"
-					frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
-					style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
-					allowfullscreen> </iframe>
-				<div style="margin-bottom:5px"> <strong> <a
-							href="//www.slideshare.net/BrianSchilder/fungen-jc-presentation-mostafavi-et-al-2019"
-							title="FunGen JC Presentation - Mostafavi et al. (2019)" target="_blank">FunGen JC
-							Presentation - Mostafavi et al. (2019)</a> </strong> by <strong><a
-							href="https://www.slideshare.net/BrianSchilder" target="_blank">Katia Lopes</a></strong>
+			<div id="slideshare" class="row"> 
+				<div>
+					<!-- presentation -->
+					<iframe src="//www.slideshare.net/slideshow/embed_code/key/cgZmIzrJzaV1CZ" width="595" height="485"
+						frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
+						style="margin-bottom:5px; max-width: 100%;"
+						allowfullscreen> </iframe>
+					<div style="margin-bottom:5px"> <strong> <a
+								href="//www.slideshare.net/BrianSchilder/fungen-jc-presentation-mostafavi-et-al-2019"
+								title="FunGen JC Presentation - Mostafavi et al. (2019)" target="_blank">FunGen JC
+								Presentation - Mostafavi et al. (2019)</a> </strong> by <strong><a
+								href="https://www.slideshare.net/BrianSchilder" target="_blank">Katia Lopes</a></strong>
+					</div>
 				</div>
-				<!-- presentation -->
-				<iframe src="//www.slideshare.net/slideshow/embed_code/key/iW42wiLIHwFiuP" width="595" height="485"
-					frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
-					style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
-					allowfullscreen>
-				</iframe>
-				<div style="margin-bottom:5px"> <strong> <a
-							href="//www.slideshare.net/BrianSchilder/github-presentation-128406831"
-							title="GitHub Presentation" target="_blank">GitHub Presentation</a> </strong> by
-					<strong><a href="//www.slideshare.net/BrianSchilder" target="_blank">Brian Schilder</a></strong>
+
+				<div>
+					<!-- presentation -->
+					<iframe src="//www.slideshare.net/slideshow/embed_code/key/iW42wiLIHwFiuP" width="595" height="485"
+						frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
+						style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
+						allowfullscreen>
+					</iframe>
+					<div style="margin-bottom:5px"> <strong> <a
+								href="//www.slideshare.net/BrianSchilder/github-presentation-128406831"
+								title="GitHub Presentation" target="_blank">GitHub Presentation</a> </strong> by
+						<strong><a href="//www.slideshare.net/BrianSchilder" target="_blank">Brian Schilder</a></strong>
+					</div>
 				</div>
-				<!-- presentation -->
-				<iframe src="//www.slideshare.net/slideshow/embed_code/key/HyrqheRo0DTvF8" width="595" height="485"
-					frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
-					style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
-					allowfullscreen>
-				</iframe>
-				<div style="margin-bottom:5px"> <strong> <a
-							href="//www.slideshare.net/BrianSchilder/sundaram-et-al-2018-presentation"
-							title="Sundaram et al. 2018 Presentation" target="_blank">Sundaram et al. 2018
-							Presentation</a> </strong> by <strong><a href="https://www.slideshare.net/BrianSchilder"
-							target="_blank">Brian Schilder</a></strong>
+
+				<div>
+					<!-- presentation -->
+					<iframe src="//www.slideshare.net/slideshow/embed_code/key/HyrqheRo0DTvF8" width="595" height="485"
+						frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
+						style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
+						allowfullscreen>
+					</iframe>
+					<div style="margin-bottom:5px"> <strong> <a
+								href="//www.slideshare.net/BrianSchilder/sundaram-et-al-2018-presentation"
+								title="Sundaram et al. 2018 Presentation" target="_blank">Sundaram et al. 2018
+								Presentation</a> </strong> by <strong><a href="https://www.slideshare.net/BrianSchilder"
+								target="_blank">Brian Schilder</a></strong>
+					</div>
 				</div>
 			</div>
 
