--- a/footer.html
+++ b/footer.html
@@ -43,12 +43,12 @@
             </div>
             <div class="col-md-3">
                 <a href="https://github.com/RajLabMSSM" target="_blank">
-                    <img src="./icons/github.png" id="github-logo">
+                    <img src="./icons/github_white.png" id="github-logo">
                 </a>
                 <br><br>
                 <div id="sinai-logo">
                     <a href="https://icahn.mssm.edu/" target="_blank">
-                        <img src="./icons/Icahn.png">
+                        <img src="./icons/mssm_logo_whitetext.png">
                     </a>
                 </div> 
             </div> 
