--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		</div>
 		<div class="inner" id="homepageCols">
 			<div class="row container">
-				<div class="col-md-4 homepageColumn" id="recent_pubs">
+				<div class="col-md-4 homepageColumn container" id="recent_pubs">
 					<h3>Recent Publications</h3>
 					<div class="scroll">
 						<ul>
@@ -153,7 +153,7 @@
 					<a href="./publications.html" target="_blank" class="button alt">More Publications</a>
 				</div>
 
-				<div class="col-md-4 homepageColumn news" id="news">
+				<div class="col-md-4 homepageColumn news container" id="news">
 					<h3>News and Events</h3>
 					<div class="scroll"> 
 						<ul>
@@ -185,7 +185,7 @@
 
 				<div class="col-md-4 homepageColumn" id="twitter">
 					<h3>Recent Tweets</h3>
-					<a class="twitter-timeline" href="https://twitter.com/trajnp?ref_src=twsrc%5Etfw" height=84%>
+					<a class="twitter-timeline container" href="https://twitter.com/trajnp?ref_src=twsrc%5Etfw" height=84%>
 						Tweets by trajnp</a>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
