--- a/team.html
+++ b/team.html
@@ -80,14 +80,14 @@
                                     <div class="card">
                                         <div class="card-body text-center mt-4">
                                             <h4 class="card-title">Towfique Raj, Ph.D.</h4>
-                                            <p class="card-text"><h2 class="leadLetter">T</h2>owfique Raj, PhD, is a core faculty member in the
+                                            <p class="card-text"><h2 class="leadLetter">T</h2>owfique Raj, Ph.D., is a core faculty member in the
                                                 <a target="_blank" href="https://icahn.mssm.edu/research/loeb-alzheimers">Ronald
                                                     M.
                                                     Loeb Center for Alzheimer's Disease</a> and an assistant professor
                                                 in the <a target="_blank" href="https://icahn.mssm.edu/about/departments/neuroscience">Department
                                                     of Neuroscience</a> and the <a target="_blank" href="https://icahn.mssm.edu/research/genomics">Department
                                                     of Genetics and Genomics</a> at Icahn School of Medicine at Mount
-                                                Sinai, New York. Dr. Raj received his PhD in genetics from
+                                                Sinai, New York. Dr. Raj received his Ph.D. in genetics from
                                                 <a target="_blank" href="https://www.graduate.study.cam.ac.uk/courses/directory/blgepdphg">Cambridge
                                                     University</a> and completed a postdoctoral fellowship at the
                                                 <a target="_blank" href="https://www.broadinstitute.org/">Broad
