--- a/footer.html
+++ b/footer.html
@@ -4,9 +4,10 @@
     <head></head>
     <body>
         <!-- Footer --> 
-        <h3>Contact Us</h3>
+        
         <div class="row">
             <div class="col-md-3">
+                    <h3>Contact Us</h3>
                 <iframe id="map"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.789686381047!2d-73.95461098459268!3d40.78863757932357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258a73c43f3a3%3A0xaf52777f7f7b2ae!2s1425+Madison+Ave%2C+New+York%2C+NY+10029!5e0!3m2!1sen!2sus!4v1543959381826"
                     frameborder="0" allowfullscreen></iframe>
@@ -22,6 +23,13 @@
                     Tel: 212-659-5648<br>
                     E-mail: <br>
                     <email>towfique.raj [at] mssm.edu</email>
+                    <br><br> 
+                    <div> 
+                        <p>
+                            <img id="copyright" src="icons/copyright.png">
+                        Raj Lab
+                        </p>
+                    </div>
                 </p>
             </div>
 
@@ -50,7 +58,9 @@
                     <a href="https://icahn.mssm.edu/" target="_blank">
                         <img src="./icons/mssm_logo_whitetext.png">
                     </a>
-                </div> 
+                </div>  
             </div> 
+        </div>  
+            
     </body> 
 </html>
