--- a/background_video.html
+++ b/background_video.html
@@ -1,13 +1,15 @@
 <!DOCTYPE HTML>
 <!-- This website was created by Madison Parks and Brian M. Schilder -->
+<!-- Tips: https://stackoverflow.com/questions/21004335/html5-video-wont-play-in-chrome-only -->
 <html>
     <head></head>
     <body>
         <div id="home-top-video">
-            <video poster="./images/videos/network.jpeg" autoplay loop>
-                <source src="./images/videos/network.webm" type="video/webm">
-                <source src="./images/videos/network.mp4" type="video/mp4">
-                <source src="./images/videos/network.m4v" type="video/mp4"> 
+            <video poster="./images/videos/network.jpeg" preload="meta" autoplay loop>
+                <source src="./images/videos/network.mp4" type="video/mp4"> 
+                <source src="./images/videos/network.webm" type="video/webm"> 
+                <source src="./images/videos/network.m4v" type="video/mp4">
+                <source src="./images/videos/network.ogg" type="video/ogg"> 
             </video>
             <div id="bottom-gradient"></div> 
         </div>
