Fix autoplay bug on front page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>Raj Lab @ MSSM</title>
-	<meta charset="utf-8" /> 
+	<!-- <meta charset="utf-8" />  -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicon -->
@@ -14,7 +14,7 @@
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
 	<!-- Local Scripts -->
-	<script src="assets/js/util.js"></script>
+	<!-- <script src="assets/js/util.js"></script> -->
 	<script src="./assets/js/jquery.min.js"></script>  
 
 	<!-- Icons -->
