--- a/background_video.html
+++ b/background_video.html
@@ -5,9 +5,10 @@
     <head></head>
     <body>
         <div id="home-top-video">
-            <video poster="./images/videos/network.jpeg" preload="meta" autoplay loop>
-                <source src="./images/videos/network.mp4" type="video/mp4"> 
+            <video poster="./images/videos/network.jpeg" preload="meta" autoplay loop> 
+                <!-- NOTE: webm MUST be first, otherwise Chrome won't play it. -->
                 <source src="./images/videos/network.webm" type="video/webm"> 
+                <source src="./images/videos/network.mp4" type="video/mp4"> 
                 <source src="./images/videos/network.m4v" type="video/mp4">
                 <source src="./images/videos/network.ogg" type="video/ogg"> 
             </video>
