--- a/background_video.html
+++ b/background_video.html
@@ -5,7 +5,7 @@
     <head></head>
     <body>
         <div id="home-top-video">
-            <video poster="./images/videos/network.jpeg" preload="meta" autoplay loop> 
+            <video poster="./images/videos/network.jpeg" preload="meta" playsinline autoplay muted loop> 
                 <!-- NOTE: webm MUST be first, otherwise Chrome won't play it. -->
                 <source src="./images/videos/network.webm" type="video/webm"> 
                 <source src="./images/videos/network.mp4" type="video/mp4"> 
