Fix utf-8 encoding issue with data from CSVs

--- a/funding.html
+++ b/funding.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
+<!-- This website was created by Madison Parks and Brian M. Schilder --> 
+<!-- IMPORTANT!: All csv's must be saved as "CSV UTF-8 (Comma delimited) (.csv)" or else some characters will be turned into question mark diamonds. -->
 <html>
 
 <head>
