--- a/publications.html
+++ b/publications.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
+<!-- This website was created by Madison Parks and Brian M. Schilder --> 
+<!-- IMPORTANT!: All csv's must be saved as "CSV UTF-8 (Comma delimited) (.csv)" or else some characters will be turned into question mark diamonds. -->
 <html>
 
 <head>
 	<title>Raj Lab - [Publications]</title>
-	<meta charset="utf-8" />
+	<meta charset="utf-8" />  
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
