--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>Raj Lab @ MSSM</title>
-	<!-- <meta charset="utf-8" />  -->
+	<meta charset="utf-8" /> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicon -->
