--- a/navbar.html
+++ b/navbar.html
@@ -6,7 +6,7 @@
         <!-- Navbar -->
         <nav class="nav navbar navbar-expand-lg navbar-collapse">
             <a class="navbar-brand" href="./index.html">
-                <img src="./icons/brain-icon.png" class="d-inline-block align-top" alt="">
+                <img src="./icons/brain-icon_small.png" class="d-inline-block align-top" alt="">
                 RAJ LAB
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
