updated "Prioritising Parkinson's" paper with new reference

--- a/data.html
+++ b/data.html
@@ -96,10 +96,10 @@
 						<p>Yang I Li, Garrett Wong, Jack Humphrey, Towfique Raj</p></h4>
 	
 					<a href='https://rajlab.shinyapps.io/sQTLviz_CMC/' target='_blank'>
-						<h4><i class="fas fa-database"></i> Data: </h4><p>ROS/MAP sQTL browser</p>
+						<h4><i class="fas fa-database"></i> Data: </h4><p>CommonMind sQTL browser</p>
 					</a>
-					<a href='https://www.biorxiv.org/content/early/2017/12/08/231001' target='_blank'>
-						<h4><i class="fas fa-scroll"></i> Paper:</h4><p>BioRxiv</p>
+					<a href='https://www.nature.com/articles/s41467-019-08912-9' target='_blank'>
+						<h4><i class="fas fa-scroll"></i> Paper:</h4><p>Nature Communications</p>
 					</a> 
 				</div>
 			</div>
