lab picnic photos

--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
 			<div class="collapse show" id="activitiesCollapse"> 
 				<div class="row container JumpTo">
 					<p>Jump to:</p>
-					<div>
+					<div class="row">
+						<a href="#gallery5">Lab Picnic</a>
 						<a href="#gallery4">Bull Hill Hiking</a>
 						<a href="#gallery3">Holiday Party Painting</a>
 						<a href="#gallery2">Friedman Brain Institute Holiday Party</a>
@@ -223,6 +224,18 @@
 			
 				<div class="row container" > 
 					<div class="col-md-12 activities"> 
+
+						<div class="row" id="gallery5">
+							<h4>Lab Picnic</h4> 
+							<img src="./images/Action/lab_picnic.jpg"> 
+							<img src="./images/Action/lab_picnic(1).jpg"> 
+							<img src="./images/Action/lab_picnic(2).jpg">   
+							<img src="./images/Action/lab_picnic(3).jpg">   
+							<img src="./images/Action/lab_picnic(4).jpg">   
+							<img src="./images/Action/lab_picnic(5).jpg">   
+							<img src="./images/Action/lab_picnic(6).jpg">   
+							<img src="./images/Action/lab_picnic(7).jpg">   
+						</div> 
 
 						<div class="row" id="gallery4">
 							<h4>Bull Hill Hiking</h4> 
