--- a/team.html
+++ b/team.html
@@ -166,7 +166,7 @@
                                 <div class="frontside">
                                     <div class="card">
                                         <div class="card-body text-center">
-                                            <p><img class=" img-fluid" src="./images/team/Elisa.jpeg" alt="card image">
+                                            <p><img class="img-fluid" src="./images/team/Elisa.jpeg" alt="card image">
                                             </p>
                                             <h4 class="card-title">Elisa Navarro, Ph.D.</h4>
                                             <p class="card-text">Post-Doctoral Fellow</p>
@@ -184,7 +184,7 @@
                                                     href="http://www.uam.es/UAM/Home.htm?language=es">Universidad
                                                     Autonoma de
                                                     Madrid</a>. She is interested in understanding how the immune system
-                                                is altered in Alzheimer and Parkinson,
+                                                is altered in Alzheimer's and Parkinson's disease,
                                                 moving from genomic to transcriptomics and proteomics, and especially
                                                 deciphering how gene variants may affect
                                                 cellular function. Apart from the MyND project, Elisa also loves to run
